<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <ImageButton
        android:id="@+id/image_picker_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="60dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/pick_image"
        android:src="@drawable/baseline_filter_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Capture Button -->
    <ImageButton
        android:id="@+id/image_capture_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/baseline_camera_24"
        android:contentDescription="@string/capture"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rotate_camera_button"
        app:layout_constraintStart_toEndOf="@+id/image_picker_button" />

    <!-- Rotate Camera Button -->
    <ImageButton
        android:id="@+id/rotate_camera_button"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/rotate_camera"
        android:src="@drawable/baseline_cached_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>