<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.camera.AddPostFragment">

    <!--    <TextView-->
    <!--        android:id="@+id/add_location"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="16dp"-->
    <!--        android:background="?attr/selectableItemBackground"-->
    <!--        android:padding="16dp"-->
    <!--        android:text="@string/add_location"-->
    <!--        app:drawableRightCompat="@drawable/ic_right_arrow" />-->


    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="Back button"
        android:padding="10dp"
        android:src="@drawable/ic_left_arrow"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-15dp"
        tools:layout_editor_absoluteY="-2dp" />

    <ImageView
        android:id="@+id/post_image"
        android:layout_width="361dp"
        android:layout_height="473dp"
        android:contentDescription="@string/image_view"
        android:scaleType="centerCrop"
        android:src="@drawable/sample_image"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="30dp" />

    <EditText
        android:id="@+id/caption_input"
        android:layout_width="365dp"
        android:layout_height="56dp"
        android:hint="@string/write_a_caption"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="543dp" />

    <Button
        android:id="@+id/post_button"
        android:layout_width="365dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
