<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wanderlog.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_searchNavigation"
            app:destination="@id/searchNavigation" />
        <action
            android:id="@+id/action_navigation_home_to_otherUserProfile"
            app:destination="@id/otherUserProfile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_bucket_list"
        android:name="com.example.wanderlog.ui.bucket_list.BucketListFragment"
        android:label="@string/bucket_list"
        tools:layout="@layout/fragment_bucket_list" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.wanderlog.ui.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.wanderlog.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >

        <action
            android:id="@+id/action_navigation_profile_to_editProfileNavigation"
            app:destination="@id/editProfileNavigation"
           />
        <action
            android:id="@+id/action_navigation_profile_to_showPhotosNavigation"
            app:destination="@id/showPhotosNavigation" />

    </fragment>


    <fragment
        android:id="@+id/editProfileNavigation"
        android:name="com.example.wanderlog.ui.profile.EditProfileFragment"
        android:label="EditProfileFragment"
        tools:layout="@layout/fragment_edit_profile">
        <action
            android:id="@+id/action_editProfileNavigation_to_navigation_profile"
            app:destination="@id/navigation_profile"
            />
    </fragment>

    <fragment
        android:id="@+id/showPhotosNavigation"
        android:name="com.example.wanderlog.ui.profile.PhotoGalleryFragment"
        android:label="PhotoGalleryFragment"
        tools:layout="@layout/fragment_photo_gallery">


        <action
            android:id="@+id/action_showPhotosNavigation_to_postDetailFragment"
            app:destination="@id/postDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/searchNavigation"
        android:name="com.example.wanderlog.ui.home.SearchFragment"
        android:label="SearchViewFragment"
        tools:layout="@layout/fragment_search_list">
        <argument
            android:name="userID"
            app:argType="string"/>

        <action
            android:id="@+id/action_searchNavigation_to_otherUserProfile"
            app:destination="@id/otherUserProfile" />
    </fragment>

    <fragment
        android:id="@+id/otherUserProfile"
        android:name="com.example.wanderlog.ui.profile.OtherProfileFragment"
        android:label="OtherUserProfile"
        tools:layout="@layout/fragment_other_profilefragment">


        <action
            android:id="@+id/action_otherUserProfile_to_showPhotosNavigation"
            app:destination="@id/showPhotosNavigation" />
    </fragment>

    <fragment
        android:id="@+id/postDetailFragment"
        android:name="com.example.wanderlog.ui.home.PostDetailFragment"
        tools:layout="@layout/fragment_post_detail">
        <argument
            android:name="username"
            app:argType="string" />
        <argument
            android:name="postImageUrl"
            app:argType="string" />
        <argument
            android:name="likes"
            app:argType="string" />
        <argument
            android:name="comments"
            app:argType="string" />
    </fragment>









</navigation>
