<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.signup.SignupActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="142dp"
        android:layout_height="75dp"
        app:srcCompat="@mipmap/wanderlog_text_icon" />


    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="110dp"
        android:layout_height="113dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/profile_picture_border"
        app:srcCompat="@drawable/baseline_person_24" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_border"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true"
        />

    <EditText
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:autofillHints="Full Name"
        android:background="@drawable/edit_text_border"
        android:hint="Full Name"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginTop="21dp"
        android:layout_height="48dp"
        android:autofillHints="@string/prompt_password"
        android:background="@drawable/edit_text_border"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#777171"
        android:enabled="true"
        android:minHeight="48dp"
        android:text="Continue"
        android:textColor="@color/white"
        app:cornerRadius="6dp"

         />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="Already have an account? "
            android:textAlignment="center" />



        <TextView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Sign in"
            android:textColor="@color/purple_200"
            app:cornerRadius="6dp"
            />


    </LinearLayout>



</LinearLayout>